umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclobutene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h#v3" "C#h#v3" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 :double] [1 2 :single] [2 3 :single] [0 3 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h#v3" "C#h#v3" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 :double] [1 2 :single] [2 3 :single] [0 3 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
