umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclopentane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [0 4 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [0 4 "1"]]}
    :success true}}
