umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_decalin.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h#v3" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [0 5 "1"] [5 6 "1"] [6 7 "1"] [7 8 "1"] [8 9 "1"] [0 9 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h#v3" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [0 5 "1"] [5 6 "1"] [6 7 "1"] [7 8 "1"] [8 9 "1"] [0 9 "1"]] :charge 0 :spin "#u0 #s1"}}}
